tests/switch_bad_condition_type.stderr
tests/switch_bad_condition_type.hop:4:8: error: HOP2009: expected bool expression
