tests/switch_bad_condition_type.hop
// Verifies switch bad condition type.
fn f(x i32) i32 {
	switch {
		case x + 1 { return 0 }
		default    { return 1 }
	}
}
